fix:flickering of actionbar, make actionbar flex

--- a/Frontend/src/app/common/ui/actionbar/actionbar.component.scss
+++ b/Frontend/src/app/common/ui/actionbar/actionbar.component.scss
@@ -1,7 +1,9 @@
 @import "../../../../styles/variables.scss";
 
 .actionbar{
-
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 .action-always,.more{
   float:right;
